@@ -1,4 +1,7 @@
- $Id: ChangeLog,v 1.131.2.25.2.4 2008/11/14 02:01:20 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.5 2008/11/18 02:27:57 uehira Exp $
+
+2008-11-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
+	* src/winlib.c : Shm_init().
 
 2008-11-14  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* wck : 64 bit clean.
